# hollow-agentOS

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AFTER_RESTART.md  AUTONOMY_LOG.md  Dockerfile  Full Stack Goal.txt  HollowAgentOS.bat  README.md  ROADMAP.md  config.example.json  demo_autonomous_agent.py  docker-compose.yml  entrypoint.sh  flappybird_hollow.py  flappybird_hollow_v2.py  flappybird_naive.py  flappybird_naive_v2.py  install.bat  install.ps1  launch.bat  matrix.py  monitor.py  pyproject.toml  requirements-monitor.txt  requirements.txt  restore.bat  restore.ps1  run_autonomous_agent.py  sentence_transformers.py  stop.bat  submit_task.py  telegram_notify.py  test_file_from_agent.txt  test_qwen_integration.py  test_qwen_reasoning_comparison.py  test_real_autonomy.py  test_run.py  thoughts.bat  (+1 more)
agents/: adaptive_router.py  agent_identity.py  agent_migration.py  agent_native_interface.py  agent_quorum.py  audit.py  autonomy_loop.py  batch_llm.py  benchmark.py  bus.py  capability_graph.py  capability_quorum.py  capability_synthesis.py  consensus.py  daemon.py  distributed_consensus.py  distributed_memory.py  distributed_swarm.py  events.py  execution_engine.py  lineage.py  live_capabilities.py  model_manager.py  persistent_goal.py  proposals.py  ratelimit.py  reasoning_layer.py  registry.py  resource_manager.py  scheduler.py  self_improvement_loop.py  self_modification.py  semantic_memory.py  signals.py  specialization.py  standards.py  suffering.py  task_queue.py  transaction.py  version_monitor.py
api/: agent_routes.py  goal_routes.py  server.py
(+813 files in other folders)
