[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hollow-sdk"
version = "0.6.0"
description = "Python SDK for Hollow AgentOS — a structured JSON-native environment for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["agents", "llm", "ai", "mcp", "token-efficiency", "agentos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/ninjahawk/hollow-agentOS"
Repository = "https://github.com/ninjahawk/hollow-agentOS"
Issues = "https://github.com/ninjahawk/hollow-agentOS/issues"

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.hatch.build.targets.wheel.sources]
"sdk" = "hollow"
